# emr-crm

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  entrypoint.sh  makefile  pyproject.toml  pytest.ini
a_users/: admin.py  apps.py  context_processors.py  middleware.py  models.py  urls.py  views.py
a_users/migrations/: 0001_initial.py
a_users/templatetags/: query_helpers.py
b_customers/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
b_customers/migrations/: 0001_initial.py  0002_customer_created_by.py  0003_alter_customer_contact_number.py  0004_customer_updated_by_alter_customer_created_by_and_more.py
c_devices/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
c_devices/migrations/: 0001_initial.py  0002_device_created_by.py  0003_device_updated_by_alter_device_created_by_and_more.py
config/: settings.py  urls.py  views.py
d_repairs/: admin.py  apps.py  email_utils.py  forms.py  models.py  signing.py  urls.py  utils.py  views.py
d_repairs/migrations/: 0001_initial.py  0002_alter_repair_status.py  0003_alter_repairnote_options.py  0005_repair_repair_id_and_more.py  (+1 more)
e_quotations/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
f_payments/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
templates/: 403.html  404.html  500.html  _sidebar.html  _topbar.html  base.html  base_dashboard.html  dashboard.html  search_results.html
tests/: factories.py  test_models.py  test_utils.py  test_views.py
z_core/: apps.py  forms.py  logging_utils.py  models.py
(+32 files in other folders)
